--- a/appUNO/templates/appUNO/estudiantes.html
+++ b/appUNO/templates/appUNO/estudiantes.html
@@ -3,8 +3,8 @@
 
 {% block contenido %}
 
-<h1> Coder Academy </h1>
+<h1> Estudiantes </h1>
 
-<p> Esta es la academia coder, bienvenido </p>
+<p> Estos son los estudiantes </p>
 
 {% endblock %}
