--- a/appUNO/templates/appUNO/profesores.html
+++ b/appUNO/templates/appUNO/profesores.html
@@ -3,8 +3,8 @@
 
 {% block contenido %}
 
-<h1> Coder Academy </h1>
+<h1> Profesores </h1>
 
-<p> Esta es la academia coder, bienvenido </p>
+<p> Estos son los profesores de la academia </p>
 
 {% endblock %}
